# gamomania

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  TODO.md  dep.sh
src/: alloc.h  alloc.hpp  camera.c  camera.cpp  camera.h  camera.hpp  demo.c  demo.cpp  demo.h  demo.hpp  event.c  event.cpp  event.h  file.c  file.cpp  file.h  file.hpp  gl_debug.c  gl_debug.cpp  gl_debug.h  gl_debug.hpp  hash.c  hash.cpp  hash.hpp  light.c  light.cpp  light.h  light.hpp  list.c  list.cpp  list.h  logs.hpp  main.c  main.cpp  material.c  material.cpp  material.h  material.hpp  mesh.c  mesh.cpp  (+13 more)
src/shader/: fragment.glsl  modelFragment.glsl  modelVertex.glsl  vertex.glsl
